NetBSD Problem Report #43659

Return-Path: <jruohone@gmail.com>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id E460563BB12
	for <gnats-bugs@gnats.netbsd.org>; Sat, 24 Jul 2010 09:25:35 +0000 (UTC)
Message-Id: <20100724092530.EB25BF890@marx.bitnet>
Date: Sat, 24 Jul 2010 12:25:30 +0300 (EEST)
From: Jukka Ruohonen <jruohonen@iki.fi>
Sender: a b <jruohone@gmail.com>
Reply-To: jruohonen@iki.fi
To: gnats-bugs@gnats.NetBSD.org
Subject: acpiwmi(4) should pass EC operation regions to acpiec(4)
X-Send-Pr-Version: 3.95

>Number:         43659
>Category:       port-i386
>Synopsis:       acpiwmi(4) should pass EC operation regions to acpiec(4)
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    jruoho
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Jul 24 09:30:01 +0000 2010
>Closed-Date:    Thu Oct 28 15:55:57 +0000 2010
>Last-Modified:  Thu Oct 28 16:00:04 +0000 2010
>Originator:     Jukka Ruohonen
>Release:        current
>Organization:
-
>Environment:
>Description:

The so-called WMI may contain EC's operation regions. These need to be
passed to acpiec(4) to ensure that we do not open a can of worms.
This may also cure some of the infamous ACPICA error messages such as:

	ACPI Error (evregion-0666): No handler for Region [FOOBAR]
	(ffffff0000000000) [EmbeddedControl] [20070126]

>How-To-Repeat:

Code and DSDT exploration.

>Fix:

The acpiwmi(4) driver should install EC address space handler and pass
everything to acpiec(4) by using acpiec_bus_read() and acpiec_bus_write().

Note that this is already done in the equivalent FreeBSD driver.

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: port-i386-maintainer->jruoho
Responsible-Changed-By: jruoho@NetBSD.org
Responsible-Changed-When: Sat, 24 Jul 2010 09:51:22 +0000
Responsible-Changed-Why:

I'll deal with this some day.



State-Changed-From-To: open->analyzed
State-Changed-By: jruoho@NetBSD.org
State-Changed-When: Sat, 24 Jul 2010 09:51:22 +0000
State-Changed-Why:


From: "Jukka Ruohonen" <jruoho@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43659 CVS commit: src
Date: Sun, 24 Oct 2010 08:54:15 +0000

 Module Name:	src
 Committed By:	jruoho
 Date:		Sun Oct 24 08:54:15 UTC 2010

 Modified Files:
 	src/distrib/sets/lists/man: mi
 	src/share/man/man4: acpiwmi.4
 	src/sys/arch/amd64/conf: GENERIC
 	src/sys/arch/i386/conf: GENERIC
 	src/sys/dev/acpi/wmi: files.wmi
 Added Files:
 	src/sys/dev/acpi/wmi: wmi_msi.c

 Log Message:
 Add acpiwmi(4) mappings for MSI laptops.

 XXX: It may be necessary to fix PR # 43659 before this works on all models.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1241 -r1.1242 src/distrib/sets/lists/man/mi
 cvs rdiff -u -r1.4 -r1.5 src/share/man/man4/acpiwmi.4
 cvs rdiff -u -r1.286 -r1.287 src/sys/arch/amd64/conf/GENERIC
 cvs rdiff -u -r1.994 -r1.995 src/sys/arch/i386/conf/GENERIC
 cvs rdiff -u -r1.6 -r1.7 src/sys/dev/acpi/wmi/files.wmi
 cvs rdiff -u -r0 -r1.1 src/sys/dev/acpi/wmi/wmi_msi.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: analyzed->closed
State-Changed-By: jruoho@NetBSD.org
State-Changed-When: Thu, 28 Oct 2010 15:55:57 +0000
State-Changed-Why:
Should be fixed in revision 1.11.


From: "Jukka Ruohonen" <jruoho@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43659 CVS commit: src/sys/dev/acpi/wmi
Date: Thu, 28 Oct 2010 15:55:05 +0000

 Module Name:	src
 Committed By:	jruoho
 Date:		Thu Oct 28 15:55:05 UTC 2010

 Modified Files:
 	src/sys/dev/acpi/wmi: wmi_acpi.c wmi_acpivar.h

 Log Message:
 Install EC space handler and pass everything to acpiec(4).
 Should fix PR # 43659.


 To generate a diff of this commit:
 cvs rdiff -u -r1.10 -r1.11 src/sys/dev/acpi/wmi/wmi_acpi.c
 cvs rdiff -u -r1.4 -r1.5 src/sys/dev/acpi/wmi/wmi_acpivar.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.