Install EC space handler and pass everything to acpiec(4). Should fix PR # 43659.